Fixed footer breaking out of container when titles are too long

--- a/src/assets/stylesheets/main/layout/_footer.scss
+++ b/src/assets/stylesheets/main/layout/_footer.scss
@@ -52,6 +52,7 @@
     flex-grow: 0.01;
     padding-top: px2rem(28px);
     padding-bottom: px2rem(8px);
+    overflow: hidden;
     outline-color: var(--md-accent-fg-color);
     transition: opacity 250ms;
 
